js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-defer-no-new-call-expression-prop-access.js








































$DONOTEVALUATE();

do {
  new import.defer('./empty_FIXTURE.js').prop;
} while (false);
